fixed icons alignment

--- a/css/page.css
+++ b/css/page.css
@@ -21,8 +21,7 @@ body {
 h1 {
     font-size: 4.0em;
     font-weight: bold;
-    
-    
+    text-align: center;
     margin: 0;
 }
 h3 {
@@ -67,11 +66,11 @@ h2 {
 }
 
 .row {
-    width: 103%;
+    width: 104%;
     display: flex;
     flex-direction: row;
     justify-content: center; 
-    max-width: i40em;  
+    max-width: 140em;  
     
 }
 .twitter-handle {
